Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26541

No tasks created in issues pane for iOS build issues

XMLWordPrintable

    • iOS/tvOS/watchOS

      Create dummy application (CMake or qmake), add code with errors, build.
      The build fails, but no tasks are created for the issues in the Issues pane.

      Probably that is the case because the output from the xcodebuild tool ends up on stdout.

      CMake:


      09:24:01: Starting: "/opt/homebrew/Cellar/cmake/3.21.3/bin/cmake" --build /Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator --target ALL_BUILD --config Debug
      2021-11-08 09:24:03.550 xcodebuild[80250:13465460] [MT] iPhoneConnect: <DVTiOSDevice (0x7ffa6cd68980), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4
      2021-11-08 09:24:03.550 xcodebuild[80250:13465460] [MT] iPhoneConnect: <DVTiOSDevice (0x7ffa6cd68980), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4

      Command line invocation:
      /Applications/Xcode.app/Contents/Developer/usr/bin/xcodebuild -project cmake_widgets.xcodeproj build -target ALL_BUILD -parallelizeTargets -configuration Debug -hideShellScriptEnvironment

      User defaults from command line:
      HideShellScriptEnvironment = YES
      IDEPackageSupportUseBuiltinSCM = YES

      note: Using new build system
      note: Planning
      Analyze workspace

      Create build description
      Build description signature: 56ef821559d3b02edd3871b566ac038c
      Build description path: /Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/build/XCBuildData/56ef821559d3b02edd3871b566ac038c-desc.xcbuild

      note: Build preparation complete
      note: Building targets in parallel
      PhaseScriptExecution Generate\ CMakeFiles/ZERO_CHECK /Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/cmake_widgets.build/Debug-iphonesimulator/ZERO_CHECK.build/Script-72F7D8A7656B60685213AD24.sh (in target 'ZERO_CHECK' from project 'cmake_widgets')
      cd /Users/ziller/temp/cmake_widgets
      /bin/sh -c /Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/cmake_widgets.build/Debug-iphonesimulator/ZERO_CHECK.build/Script-72F7D8A7656B60685213AD24.sh
      make: `/Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/CMakeFiles/cmake.check_cache' is up to date.

      PhaseScriptExecution Generate\ CMakeFiles/cmake_widgets_autogen /Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/cmake_widgets.build/Debug-iphonesimulator/cmake_widgets_autogen.build/Script-A6F896C0686B3063DF566911.sh (in target 'cmake_widgets_autogen' from project 'cmake_widgets')
      cd /Users/ziller/temp/cmake_widgets
      /bin/sh -c /Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/cmake_widgets.build/Debug-iphonesimulator/cmake_widgets_autogen.build/Script-A6F896C0686B3063DF566911.sh

      CompileC /Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/cmake_widgets.build/Debug-iphonesimulator/cmake_widgets.build/Objects-normal/x86_64/main.o /Users/ziller/temp/cmake_widgets/main.cpp normal x86_64 c++ com.apple.compilers.llvm.clang.1_0.compiler (in target 'cmake_widgets' from project 'cmake_widgets')
      cd /Users/ziller/temp/cmake_widgets
      /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -x c++ -target x86_64-apple-ios13.0-simulator -fmessage-length\=0 -fdiagnostics-show-note-include-stack -fmacro-backtrace-limit\=0 -Wno-trigraphs -fpascal-strings -O0 -Wno-missing-field-initializers -Wno-missing-prototypes -Wno-return-type -Wno-non-virtual-dtor -Wno-overloaded-virtual -Wno-exit-time-destructors -Wno-missing-braces -Wparentheses -Wswitch -Wno-unused-function -Wno-unused-label -Wno-unused-parameter -Wno-unused-variable -Wunused-value -Wno-empty-body -Wno-uninitialized -Wno-unknown-pragmas -Wno-shadow -Wno-four-char-constants -Wno-conversion -Wno-constant-conversion -Wno-int-conversion -Wno-bool-conversion -Wno-enum-conversion -Wno-float-conversion -Wno-non-literal-null-conversion -Wno-objc-literal-conversion -Wshorten-64-to-32 -Wno-newline-eof -Wno-c++11-extensions -DCMAKE_INTDIR\=\"Debug-iphonesimulator\" -DQT_CORE_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator15.0.sdk -fasm-blocks -fstrict-aliasing -Wdeprecated-declarations -Winvalid-offsetof -g -Wno-sign-conversion -Wno-infinite-recursion -Wno-move -Wno-comma -Wno-block-capture-autoreleasing -Wno-strict-prototypes -Wno-range-loop-analysis -Wno-semicolon-before-method-body -I/Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/Debug-iphonesimulator/include -I/Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator -I/Users/ziller/temp/cmake_widgets -I/Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/cmake_widgets_autogen/include_Debug -isystem /Users/Shared/qt/Qt/6.2.1/ios/include/QtCore -isystem /Users/Shared/qt/Qt/6.2.1/ios/include -isystem /Users/Shared/qt/Qt/6.2.1/ios/mkspecs/macx-ios-clang -isystem /Users/Shared/qt/Qt/6.2.1/ios/include/QtWidgets -isystem /Users/Shared/qt/Qt/6.2.1/ios/include/QtGui -I/Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/cmake_widgets.build/Debug-iphonesimulator/cmake_widgets.build/DerivedSources-normal/x86_64 -I/Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/cmake_widgets.build/Debug-iphonesimulator/cmake_widgets.build/DerivedSources/x86_64 -I/Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/cmake_widgets.build/Debug-iphonesimulator/cmake_widgets.build/DerivedSources -F/Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/Debug-iphonesimulator -std\=gnu++17 -MMD -MT dependencies -MF /Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/cmake_widgets.build/Debug-iphonesimulator/cmake_widgets.build/Objects-normal/x86_64/main.d --serialize-diagnostics /Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/cmake_widgets.build/Debug-iphonesimulator/cmake_widgets.build/Objects-normal/x86_64/main.dia -c /Users/ziller/temp/cmake_widgets/main.cpp -o /Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/cmake_widgets.build/Debug-iphonesimulator/cmake_widgets.build/Objects-normal/x86_64/main.o
      /Users/ziller/temp/cmake_widgets/main.cpp:34:5: error: use of undeclared identifier 'wa'
      wa.show();
      ^
      1 error generated.

      ** BUILD FAILED **


      The following build commands failed:
      CompileC /Users/ziller/temp/build-cmake_widgets-Qt_6_2_1_for_iOS_Simulator/cmake_widgets.build/Debug-iphonesimulator/cmake_widgets.build/Objects-normal/x86_64/main.o /Users/ziller/temp/cmake_widgets/main.cpp normal x86_64 c++ com.apple.compilers.llvm.clang.1_0.compiler (in target 'cmake_widgets' from project 'cmake_widgets')
      (1 failure)


      For qmake a generic "xcodebuild failed" issue is created:


      xcodebuild build -allowProvisioningUpdates -project qmake_widgets.xcodeproj -scheme qmake_widgets -configuration Debug -destination "id=5D2B3EA0-A865-4FD2-A1BB-5576C0C556B2" -destination-timeout 1 ENABLE_ONLY_ACTIVE_RESOURCES=NO
      2021-11-08 09:10:02.778 xcodebuild[77914:13444618] [MT] iPhoneConnect: <DVTiOSDevice (0x7f995ec05e70), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4
      2021-11-08 09:10:02.778 xcodebuild[77914:13444618] [MT] iPhoneConnect: <DVTiOSDevice (0x7f995ec05e70), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4

      Command line invocation:
      /Applications/Xcode.app/Contents/Developer/usr/bin/xcodebuild build -allowProvisioningUpdates -project qmake_widgets.xcodeproj -scheme qmake_widgets -configuration Debug -destination id=5D2B3EA0-A865-4FD2-A1BB-5576C0C556B2 -destination-timeout 1 ENABLE_ONLY_ACTIVE_RESOURCES=NO

      User defaults from command line:
      IDEPackageSupportUseBuiltinSCM = YES

      Build settings from command line:
      ENABLE_ONLY_ACTIVE_RESOURCES = NO

      2021-11-08 09:10:02.911 xcodebuild[77914:13444618] [MT] iPhoneConnect: <DVTiOSDevice (0x7f995ec05e70), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4
      2021-11-08 09:10:02.911 xcodebuild[77914:13444618] [MT] iPhoneConnect: <DVTiOSDevice (0x7f995ec05e70), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4
      2021-11-08 09:10:02.912 xcodebuild[77914:13444618] [MT] iPhoneConnect: <DVTiOSDevice (0x7f995ec05e70), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4
      2021-11-08 09:10:02.937 xcodebuild[77914:13444690] CFURLRequestSetHTTPCookieStorageAcceptPolicy_block_invoke: no longer implemented and should not be called
      2021-11-08 09:10:03.277 xcodebuild[77914:13444618] [MT] iPhoneConnect: <DVTiOSDevice (0x7f995ec05e70), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4
      2021-11-08 09:10:03.277 xcodebuild[77914:13444618] [MT] iPhoneConnect: <DVTiOSDevice (0x7f995ec05e70), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4
      2021-11-08 09:10:03.279 xcodebuild[77914:13444618] [MT] iPhoneConnect: <DVTiOSDevice (0x7f995ec05e70), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4
      2021-11-08 09:10:03.279 xcodebuild[77914:13444618] [MT] iPhoneConnect: <DVTiOSDevice (0x7f995ec05e70), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4
      2021-11-08 09:10:03.291 xcodebuild[77914:13444618] [MT] iPhoneConnect: <DVTiOSDevice (0x7f995ec05e70), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4
      2021-11-08 09:10:03.291 xcodebuild[77914:13444618] [MT] iPhoneConnect: <DVTiOSDevice (0x7f995ec05e70), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4

      note: Using new build system
      note: Planning
      2021-11-08 09:10:03.457 xcodebuild[77914:13444618] [MT] iPhoneConnect: <DVTiOSDevice (0x7f995ec05e70), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4
      2021-11-08 09:10:03.457 xcodebuild[77914:13444618] [MT] iPhoneConnect: <DVTiOSDevice (0x7f995ec05e70), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4

      Analyze workspace

      Create build description
      2021-11-08 09:10:03.614 xcodebuild[77914:13444618] [MT] iPhoneConnect: <DVTiOSDevice (0x7f995ec05e70), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4
      2021-11-08 09:10:03.614 xcodebuild[77914:13444618] [MT] iPhoneConnect: <DVTiOSDevice (0x7f995ec05e70), Eikes iPad Mini (2), iPad, 13.4 (17E255), 00008020-001415E63E01002E>: downgrading native architecture from arm64e to arm64 for com.apple.platform.iphoneos:13.4

      Build description signature: 6faf9c7939bc46e27df9cad27ac26737
      Build description path: /Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/XCBuildData/6faf9c7939bc46e27df9cad27ac26737-desc.xcbuild

      note: Build preparation complete
      note: Building targets in parallel
      PhaseScriptExecution Qt\ Qmake /Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/qmake_widgets.build/Debug-iphonesimulator/Qt\ Preprocess.build/Script-5E618435888B9D49F8540165.sh (in target 'Qt Preprocess' from project 'qmake_widgets')
      cd /Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug
      /bin/sh -c /Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/qmake_widgets.build/Debug-iphonesimulator/Qt\\\ Preprocess.build/Script-5E618435888B9D49F8540165.sh
      make[1]: warning: jobserver unavailable: using -j1. Add `+' to parent make rule.
      make[1]: `qmake_widgets.xcodeproj/project.pbxproj' is up to date.

      warning: Traditional headermap style is no longer supported; please migrate to using separate headermaps and set 'ALWAYS_SEARCH_USER_PATHS' to NO. (in target 'qmake_widgets' from project 'qmake_widgets')
      CompileC /Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/qmake_widgets.build/Debug-iphonesimulator/qmake_widgets.build/Objects-normal/x86_64/main.o /Users/ziller/temp/qmake_widgets/main.cpp normal x86_64 c++ com.apple.compilers.llvm.clang.1_0.compiler (in target 'qmake_widgets' from project 'qmake_widgets')
      cd /Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug
      export LANG\=en_US.US-ASCII
      /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -x c++ -target x86_64-apple-ios13.0-simulator -fmessage-length\=0 -fdiagnostics-show-note-include-stack -fmacro-backtrace-limit\=0 -Wno-trigraphs -fpascal-strings -O0 -Wno-missing-field-initializers -Wno-missing-prototypes -Wno-return-type -Wno-non-virtual-dtor -Wno-overloaded-virtual -Wno-exit-time-destructors -Wno-missing-braces -Wparentheses -Wswitch -Wno-unused-function -Wno-unused-label -Wno-unused-parameter -Wno-unused-variable -Wunused-value -Wno-empty-body -Wno-uninitialized -Wno-unknown-pragmas -Wno-shadow -Wno-four-char-constants -Wno-conversion -Wno-constant-conversion -Wno-int-conversion -Wno-bool-conversion -Wno-enum-conversion -Wno-float-conversion -Wno-non-literal-null-conversion -Wno-objc-literal-conversion -Wshorten-64-to-32 -Wno-newline-eof -Wno-c++11-extensions -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator15.0.sdk -fasm-blocks -fstrict-aliasing -Wdeprecated-declarations -Winvalid-offsetof -g -fvisibility\=hidden -fvisibility-inlines-hidden -Wno-sign-conversion -Wno-infinite-recursion -Wno-move -Wno-comma -Wno-block-capture-autoreleasing -Wno-strict-prototypes -Wno-range-loop-analysis -Wno-semicolon-before-method-body -index-store-path /Users/ziller/Library/Developer/Xcode/DerivedData/qmake_widgets-gkovdrmrelazlkcmnpfnixkrwoqs/Index/DataStore -iquote /Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/qmake_widgets.build/Debug-iphonesimulator/qmake_widgets.build/qmake_widgets-generated-files.hmap -I/Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/qmake_widgets.build/Debug-iphonesimulator/qmake_widgets.build/qmake_widgets-own-target-headers.hmap -I/Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/qmake_widgets.build/Debug-iphonesimulator/qmake_widgets.build/qmake_widgets-all-target-headers.hmap -iquote /Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/qmake_widgets.build/Debug-iphonesimulator/qmake_widgets.build/qmake_widgets-project-headers.hmap -I/Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/Debug-iphonesimulator/include -I../qmake_widgets -I. -I../../../Shared/qt/Qt/6.2.1/ios/mkspecs/common/uikit -I../../../Shared/qt/Qt/6.2.1/ios/include -I../../../Shared/qt/Qt/6.2.1/ios/include/QtWidgets -I../../../Shared/qt/Qt/6.2.1/ios/include/QtGui -I../../../Shared/qt/Qt/6.2.1/ios/include/QtCore -I. -I. -I../../../Shared/qt/Qt/6.2.1/ios/mkspecs/macx-ios-clang -I/Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/qmake_widgets.build/Debug-iphonesimulator/qmake_widgets.build/DerivedSources-normal/x86_64 -I/Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/qmake_widgets.build/Debug-iphonesimulator/qmake_widgets.build/DerivedSources/x86_64 -I/Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/qmake_widgets.build/Debug-iphonesimulator/qmake_widgets.build/DerivedSources -F/Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/Debug-iphonesimulator -pipe -stdlib\=libc++ -g -std\=gnu++1z -fobjc-nonfragile-abi -fobjc-legacy-dispatch -Wall -Wextra -fPIC -DQT_COMPILER_SUPPORTS_SSE2 -DQT_QML_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_CORE_LIB -MMD -MT dependencies -MF /Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/qmake_widgets.build/Debug-iphonesimulator/qmake_widgets.build/Objects-normal/x86_64/main.d --serialize-diagnostics /Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/qmake_widgets.build/Debug-iphonesimulator/qmake_widgets.build/Objects-normal/x86_64/main.dia -c /Users/ziller/temp/qmake_widgets/main.cpp -o /Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/qmake_widgets.build/Debug-iphonesimulator/qmake_widgets.build/Objects-normal/x86_64/main.o
      In file included from /Users/ziller/temp/qmake_widgets/main.cpp:26:
      In file included from ../qmake_widgets/widget.h:28:
      In file included from ../../../Shared/qt/Qt/6.2.1/ios/include/QtWidgets/QWidget:1:
      In file included from ../../../Shared/qt/Qt/6.2.1/ios/include/QtWidgets/qwidget.h:45:
      In file included from ../../../Shared/qt/Qt/6.2.1/ios/include/QtCore/qobject.h:47:
      ../../../Shared/qt/Qt/6.2.1/ios/include/QtCore/qstring.h:117:49: warning: implicit conversion loses integer precision: 'long long' to 'int' [-Wshorten-64-to-32]

      { return isEmpty() || front() == c ? size() - 1 : uchar(m_data[0]) - c.unicode() ; }

      ~~~~~~ ~~~~~~^~
      In file included from /Users/ziller/temp/qmake_widgets/main.cpp:26:
      In file included from ../qmake_widgets/widget.h:28:
      In file included from ../../../Shared/qt/Qt/6.2.1/ios/include/QtWidgets/QWidget:1:
      In file included from ../../../Shared/qt/Qt/6.2.1/ios/include/QtWidgets/qwidget.h:45:
      In file included from ../../../Shared/qt/Qt/6.2.1/ios/include/QtCore/qobject.h:49:
      In file included from ../../../Shared/qt/Qt/6.2.1/ios/include/QtCore/qlist.h:968:
      ../../../Shared/qt/Qt/6.2.1/ios/include/QtCore/qbytearraylist.h:81:74: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int' [-Wshorten-64-to-32]

      { return QtPrivate::QByteArrayList_join(self(), sep.constData(), sep.size()); }

      ~~~~~~~~~ ~~~^~~~~
      In file included from /Users/ziller/temp/qmake_widgets/main.cpp:26:
      In file included from ../qmake_widgets/widget.h:28:
      In file included from ../../../Shared/qt/Qt/6.2.1/ios/include/QtWidgets/QWidget:1:
      In file included from ../../../Shared/qt/Qt/6.2.1/ios/include/QtWidgets/qwidget.h:45:
      In file included from ../../../Shared/qt/Qt/6.2.1/ios/include/QtCore/qobject.h:54:
      ../../../Shared/qt/Qt/6.2.1/ios/include/QtCore/qmetatype.h:420:30: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int' [-Wshorten-64-to-32]

      { return QMetaType(type).sizeOf(); }

      ~~~~~~ ~~~~~~~~~~~~~~~^~~~~~~
      In file included from /Users/ziller/temp/qmake_widgets/main.cpp:26:
      In file included from ../qmake_widgets/widget.h:28:
      In file included from ../../../Shared/qt/Qt/6.2.1/ios/include/QtWidgets/QWidget:1:
      In file included from ../../../Shared/qt/Qt/6.2.1/ios/include/QtWidgets/qwidget.h:48:
      In file included from ../../../Shared/qt/Qt/6.2.1/ios/include/QtGui/qpalette.h:46:
      In file included from ../../../Shared/qt/Qt/6.2.1/ios/include/QtGui/qbrush.h:50:
      ../../../Shared/qt/Qt/6.2.1/ios/include/QtGui/qpixmap.h:203:79: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'uint' (aka 'unsigned int') [-Wshorten-64-to-32]
      return loadFromData(reinterpret_cast<const uchar *>(buf.constData()), buf.size(), format, flags);
      ~~~~~~~~~~~~ ~~~^~~~~
      /Users/ziller/temp/qmake_widgets/main.cpp:37:5: error: use of undeclared identifier 'wa'
      wa.show();
      ^
      4 warnings and 1 error generated.

      ** BUILD FAILED **


      The following build commands failed:
      CompileC /Users/ziller/temp/build-qmake_widgets-Qt_6_2_1_for_iOS_Simulator-Debug/qmake_widgets.build/Debug-iphonesimulator/qmake_widgets.build/Objects-normal/x86_64/main.o /Users/ziller/temp/qmake_widgets/main.cpp normal x86_64 c++ com.apple.compilers.llvm.clang.1_0.compiler (in target 'qmake_widgets' from project 'qmake_widgets')
      (1 failure)

        For Gerrit Dashboard: QTCREATORBUG-26541
        # Subject Branch Project Status CR V

            con Eike Ziller
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes