XcodebuildParser: Fix parsing for newer Xcode versions

The output of xcodebuild changed, and no longer contains
"BUILD (AGGREGATE ...)". Instead it prints various "note:"s.
Use "note: Build preparation complete" to trigger parsing the following
output on stdout for error messages.

Task-number: QTCREATORBUG-26541
Change-Id: I9dabcc30389352aa5f78dae31104a8c9cf56eb19
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>