src/plugins/projectexplorer/xcodebuildparser.cpp
@@ -54,10 +54,13 @@ XcodebuildParser::XcodebuildParser()
 
 OutputLineParser::Result XcodebuildParser::handleLine(const QString &line, OutputFormat type)
 {
+    static const QStringList notesPatterns({"note: Build preparation complete",
+                                            "note: Building targets in parallel",
+                                            "note: Planning build"});
     const QString lne = rightTrimmed(line);
     if (type == StdOutFormat) {
         QRegularExpressionMatch match = m_buildRe.match(line);
-        if (match.hasMatch()) {
+        if (match.hasMatch() || notesPatterns.contains(lne)) {
             m_xcodeBuildParserState = InXcodebuild;
             return Status::Done;
         }
@@ -182,6 +185,19 @@ void ProjectExplorerPlugin::testXcodebuildParserParsing_data()
                                    "=== BUILD AGGREGATE TARGET Qt Preprocess OF PROJECT testQQ WITH THE DEFAULT CONFIGURATION (Debug) ===\n"
                                    "in xcodebuild\n"
                                    "=== BUILD TARGET testQQ OF PROJECT testQQ WITH THE DEFAULT CONFIGURATION (Debug) ===\n"
+                                   "in xcodebuild2\n"
+                                   "** BUILD SUCCEEDED **\n"
+                                   "outside2")
+            << OutputParserTester::STDOUT
+            << QString::fromLatin1("outside\noutside2\n") << QString::fromLatin1("in xcodebuild\nin xcodebuild2\n")
+            << Tasks()
+            << QString()
+            << XcodebuildParser::OutsideXcodebuild;
+    QTest::newRow("switch outside->in->outside (new)")
+            << XcodebuildParser::OutsideXcodebuild
+            << QString::fromLatin1("outside\n"
+                                   "note: Build preparation complete\n"
+                                   "in xcodebuild\n"
                                    "in xcodebuild2\n"
                                    "** BUILD SUCCEEDED **\n"
                                    "outside2")
